@@ -35,6 +35,8 @@ dependencies {
     implementation 'org.springframework.modulith:spring-modulith-starter-core'
     implementation 'org.springframework.modulith:spring-modulith-starter-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-artemis'
+    implementation 'org.springframework.boot:spring-boot-starter-json'
     testImplementation 'org.springframework.security:spring-security-test'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
@@ -62,7 +64,7 @@ docker {
     springBootApplication {
         ports = [8081]
         baseImage = 'openjdk:24'
-        jvmArgs = ['-Dspring.profiles.active=production', '-Xmx2048m']
+        jvmArgs = ['-Dspring.profiles.active=production', '-Xmx2048m', '-Djava.security.manager=allow']
         images = ['daimonix/modulith-booking-analytics']
     }
 }
